fix: move team statuses to headless API
