# apps/api/internal/teams/handler.go
@@ -60,6 +60,10 @@ func (h Handler) Routes() chi.Router {
 	r.Get("/{key}/display-options", h.GetDisplayOptions)
 	r.Put("/{key}/display-options", h.UpdateDisplayOptions)
 	r.Get("/{key}/issues", h.Issues)
+	r.Get("/{key}/statuses", h.ListStatuses)
+	r.Post("/{key}/statuses", h.CreateStatus)
+	r.Patch("/{key}/statuses", h.UpdateStatus)
+	r.Delete("/{key}/statuses", h.DeleteStatus)
 	r.Get("/{key}/cycles", h.ListCycles)
 	r.Post("/{key}/cycles", h.CreateCycle)
 	r.Patch("/{key}/cycles/{cycleID}", h.UpdateCycle)
